--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p>Hey，我是<strong>何奏捷（jevishoo）</strong>，一只NLPer，正在读研。</p>
 
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jevishoo">👉GitHub·JH</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jevishoo">👉GitHub·JH</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -37,14 +37,9 @@ header-img: "img/post-bg-rwd.jpg"
 
 <!-- English Version -->
 <!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
+    <p>Hi, I am <strong>Zoujie He</strong>，you can call me <strong>JH</strong>. I am a NLP learner and still a graduated student</p>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/jevishoo">Github·JH</a>.</p>
 
     <h5>Talks</h5>
 
@@ -52,7 +47,7 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://jevishoo.github.io">BY</a></li>
     </ul>
 </div> -->
 
